# maple-timer-ng

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  build_isolated.ps1  release.ps1  rust-toolchain
assets_embedded/: Cargo.toml
assets_embedded/src/: lib.rs
image_match/: Cargo.toml
image_match/examples/: match_buff.rs  match_jinhillah.rs  match_reap.rs
image_match/src/: buff.rs  jinhillah.rs  lib.rs  view_ext.rs
src/: capturer.rs  fonts.rs  main.rs  rw_condvar.rs  screen_dimension.rs  stready_redraw.rs
src/timers/: jinhillah.rs  match_agent.rs  mod.rs  vskill.rs
winscr/: Cargo.toml
winscr/examples/: capture_maple.rs
winscr/src/: d3d_capture.rs  gdi_capture.rs  lib.rs  window_item.rs
