[package]
name = "image_match"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assets_manager = "0.7.2"
image = "0.23.14"
once_cell = "1.9.0"
assets_embedded = { path = "../assets_embedded" }
rayon = "1.5.1"
smallvec = "1.8.0"

[dev-dependencies]
assets_manager = { version = "0.7.2", features = ["png"] }